--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ a{
 content{
 padding: 20px;
 margin-right: 30px;
+cursor: pointer;
 }
 
 .Container{
@@ -138,7 +139,7 @@ height: 250px;
         width: 800px
     }
 }
-    @media screen and (max-width :810px) {
+    @media sreen and (max-width :810px) {
         body{
             width: 500px;
         }
